# ChangeLog for dev-ruby/rails_autolink
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jul 2012; Hans de Graaff <graaff@gentoo.org> -rails_autolink-1.0.5.ebuild,
  -rails_autolink-1.0.6.ebuild:
  Remove old versions.

*rails_autolink-1.0.7 (23 May 2012)

  23 May 2012; Hans de Graaff <graaff@gentoo.org> +rails_autolink-1.0.7.ebuild:
  Version bump. Add ruby19. Reenable tests.

*rails_autolink-1.0.6 (13 Apr 2012)

  13 Apr 2012; Hans de Graaff <graaff@gentoo.org> +rails_autolink-1.0.6.ebuild:
  Version bump.

*rails_autolink-1.0.5 (14 Feb 2012)

  14 Feb 2012; Hans de Graaff <graaff@gentoo.org> +rails_autolink-1.0.5.ebuild,
  +metadata.xml:
  Initial import.
