@@ -2,10 +2,11 @@
 Hash: SHA256
 
 DIST rails_autolink-1.0.7.gem 11264 SHA256 002b162b2c43eaf5727422928f5e93d12c7bf2df6f446a4189a9c57b9b278382 SHA512 4586889d65f4911868f3ebc0574dd3eddadb96199155384951d097c103a69da7eceb4184503b52ffa09a7339c5ed486b9f38788fefee273feb541bcd09c1e9ff WHIRLPOOL 136672d5183f59b767c05719c65a7001fe3b3b01d4f56b1c929c5263e8e6936b89186b4c2965a6715b05c2ed692630817d2180a906ca06d16018fcb450344477
+DIST rails_autolink-1.0.9.gem 11264 SHA256 1c96b45727fddeb250b2f28096d21439e741329ea466e2ba0512f56b906c111f SHA512 527431fd4efa522dc13a46ae268fd223d97e9544f4ea498e0f148db16a961d8d9c059a19183d5fbb24d795386a020eb5114e197e5c1630d5f20ed08fc08167a0 WHIRLPOOL d9ef60c636929b1dcaebd906512bb3192e76c7803014eae5256ba7e5d8ba0037575b46afb8ac7e9bbf69fda498ecf67769625bd4c6dcd8e02848b86b192de933
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlAJN58ACgkQiIP6VqMIqNe/lQD8C9FiHHfKxHV1Mg5lOw3g4rHr
-wj3h5voPw4f7ySL/jXAA/3lTymVNk/3e28rtqCYvWgjYu+MNHg3Y8NbFxMz/+Nfz
-=9pGf
+iF4EAREIAAYFAlAJOGEACgkQiIP6VqMIqNfPugD+OD1qmIjU1Z/lE4juQtL6FbtZ
+W5xta6ZZodbObfFTliUA+QEpgOuY9Gp27PKKZZRnQmkE5az6p1gza2sUJ+gk2Kxf
+=w+ej
 -----END PGP SIGNATURE-----
