@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*rails_autolink-1.0.9 (20 Jul 2012)
+
+  20 Jul 2012; Hans de Graaff <graaff@gentoo.org> +rails_autolink-1.0.9.ebuild:
+  Version bump.
+
   20 Jul 2012; Hans de Graaff <graaff@gentoo.org> -rails_autolink-1.0.5.ebuild,
   -rails_autolink-1.0.6.ebuild:
   Remove old versions.
